--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Группа Семь</title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -40,100 +41,133 @@
             </div>
         </div>
     </div>
-    <div class="features" id="about">
+    <div class="content">
         <div class="container">
-            <div class="info">
-                <div class="info-header">
-                    <div class="info-header-tab">История</div>
-                    <div class="info-header-tab">Участники</div>
-                    <div class="info-header-tab">Проекты</div>
-                    <div class="info-header-tab">Кто мы</div>
-                </div>
-                <div class="info-tabcontent">
-                    <div class="description">
-                        <div class="description-title">
-                            С чего все начиналось
-                        </div>
-                        <div class="description-text">
-                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
-                        </div>
-                        <div class="description-btn">
-                            узнать подробнее
+                <div class="features" id="about">
+                        <div class="container">
+                            <div class="info">
+                                <div class="info-header">
+                                    <div class="info-header-tab">История</div>
+                                    <div class="info-header-tab">Участники</div>
+                                    <div class="info-header-tab">Проекты</div>
+                                    <div class="info-header-tab">Кто мы</div>
+                                </div>
+                                <div class="info-tabcontent">
+                                    <div class="description">
+                                        <div class="description-title">
+                                            С чего все начиналось
+                                        </div>
+                                        <div class="description-text">
+                                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
+                                        </div>
+                                        <div class="description-btn">
+                                            узнать подробнее
+                                        </div>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="img/tabs/history.jpg" alt="">
+                                    </div>
+                                </div>               
+                                <div class="info-tabcontent">
+                                    <div class="description">
+                                        <div class="description-title">
+                                            Состав группы
+                                        </div>
+                                        <div class="description-text">
+                                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
+                                        </div>
+                                        <div class="description-btn">
+                                            узнать подробнее
+                                        </div>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="img/tabs/group.jpg" alt="">
+                                    </div>
+                                </div>               
+                                <div class="info-tabcontent">
+                                    <div class="description">
+                                        <div class="description-title">
+                                            Чем занимаемся
+                                        </div>
+                                        <div class="description-text">
+                                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
+                                        </div>
+                                        <div class="description-btn">
+                                            узнать подробнее
+                                        </div>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="img/tabs/projects.jpg" alt="">
+                                    </div>
+                                </div>               
+                                <div class="info-tabcontent">
+                                    <div class="description">
+                                        <div class="description-title">
+                                            Кто мы такие
+                                        </div>
+                                        <div class="description-text">
+                                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
+                                        </div>
+                                        <div class="description-btn">
+                                            узнать подробнее
+                                        </div>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="img/tabs/weare.jpg" alt="">
+                                    </div>
+                                </div>               
+                            </div>
                         </div>
                     </div>
-                    <div class="photo">
-                        <img src="img/tabs/history.jpg" alt="">
-                    </div>
-                </div>               
-                <div class="info-tabcontent">
-                    <div class="description">
-                        <div class="description-title">
-                            Состав группы
-                        </div>
-                        <div class="description-text">
-                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
-                        </div>
-                        <div class="description-btn">
-                            узнать подробнее
+                    <div class="media" id="media-content">
+                        <div class="container">
+                            <div class="row">
+                                <div class="our-photo">
+                                    
+                                </div>
+                                <div class="our-video"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="photo">
-                        <img src="img/tabs/group.jpg" alt="">
-                    </div>
-                </div>               
-                <div class="info-tabcontent">
-                    <div class="description">
-                        <div class="description-title">
-                            Чем занимаемся
+                    <footer class="footer-block">
+                        <div class="container" id="contacts">
+                            <div class="row">
+                                <div class="social-block col-6">
+                                    <div class="social-block-title">
+                                        Наши социальные сети
+                                    </div>
+                                    <div class="social-block-links">
+                                        <div class="vk-link">
+                                            <a href="https://vk.com/7grupa7">
+                                                <img src="img/social/vk.svg" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="insta-link">
+                                            <a href="https://www.instagram.com/7gruppa7/">
+                                                <img src="img/social/instagram.svg" alt="">
+                                            </a>
+                                        </div>                                        
+                                    </div>
+                                </div>
+                                <div class="contact-block col-6">
+                                    <div class="contact-block-title">
+                                        Организационные вопросы
+                                    </div>
+                                    <div class="contact-block-links">
+                                        <div class="phone-link">
+                                            <img src="img/social/phone.svg" alt="">
+                                            <a href="tel:+375298182552">+375 (29) 818-25-52</a>
+                                        </div>
+                                        <div class="personal-message">
+                                            <a href="https://vk.me/id336963028">Написать менеджеру</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="description-text">
-                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
-                        </div>
-                        <div class="description-btn">
-                            узнать подробнее
-                        </div>
-                    </div>
-                    <div class="photo">
-                        <img src="img/tabs/projects.jpg" alt="">
-                    </div>
-                </div>               
-                <div class="info-tabcontent">
-                    <div class="description">
-                        <div class="description-title">
-                            Кто мы такие
-                        </div>
-                        <div class="description-text">
-                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Семь прямо залетают подзаголовок переулка взобравшись ее использовало. Диких агентство речью ты, текстами текст всеми океана реторический вопрос свою. Правилами меня осталось ты послушавшись, не страна там встретил. Взобравшись, рот. Своего пояс рекламных пунктуация! До великий своего ему языкового щеке.
-                        </div>
-                        <div class="description-btn">
-                            узнать подробнее
-                        </div>
-                    </div>
-                    <div class="photo">
-                        <img src="img/tabs/weare.jpg" alt="">
-                    </div>
-                </div>               
-            </div>
+                    </footer>
         </div>
     </div>
-    <div class="media" id="media-content">
-        <div class="container">
-            <div class="row">
-                <div class="our-photo">
-                    
-                </div>
-                <div class="our-video"></div>
-            </div>
-        </div>
-    </div>
-    <footer class="footer-block">
-        <div class="container">
-            <div class="row">
-                <div class="social-link"></div>
-                <div class="contact"></div>
-            </div>
-        </div>
-    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
