--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Группа Семь</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
@@ -13,11 +13,11 @@
     <header class="header-block">
         <div class="container">
             <nav>
-                <ul>
-                    <li><a href="#about">О нас</a></li>
-                    <li><a href="#media-content">Медиа</a></li>
-                    <li><a href="#price">Цена</a></li>
-                    <li><a href="#contacts">Контакты</a></li>
+                <ul class="row">
+                    <li class="col-md-3 col-6"><a href="#about">О нас</a></li>
+                    <li class="col-md-3 col-6"><a href="#media-content">Медиа</a></li>
+                    <li class="col-md-3 col-6"><a href="#price">Цена</a></li>
+                    <li class="col-md-3 col-6"><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
         </div>        
@@ -46,14 +46,14 @@
                 <div class="features" id="about">
                         <div class="container">
                             <div class="info">
-                                <div class="info-header">
-                                    <div class="info-header-tab">История</div>
-                                    <div class="info-header-tab">Участники</div>
-                                    <div class="info-header-tab">Проекты</div>
-                                    <div class="info-header-tab">Кто мы</div>
+                                <div class="info-header row">
+                                    <div class="info-header-tab col-md-3 col-6">История</div>
+                                    <div class="info-header-tab col-md-3 col-6">Участники</div>
+                                    <div class="info-header-tab col-md-3 col-6">Проекты</div>
+                                    <div class="info-header-tab col-md-3 col-6">Кто мы</div>
                                 </div>
-                                <div class="info-tabcontent">
-                                    <div class="description">
+                                <div class="info-tabcontent row">
+                                    <div class="description col-md-6 col-12"">
                                         <div class="description-title">
                                             С чего все начиналось
                                         </div>
@@ -64,12 +64,12 @@
                                             узнать подробнее
                                         </div>
                                     </div>
-                                    <div class="photo">
+                                    <div class="photo col-md-6 col-12"">
                                         <img src="img/tabs/history.jpg" alt="">
                                     </div>
                                 </div>               
-                                <div class="info-tabcontent">
-                                    <div class="description">
+                                <div class="info-tabcontent row">
+                                    <div class="description col-md-6 col-12"">
                                         <div class="description-title">
                                             Состав группы
                                         </div>
@@ -80,12 +80,12 @@
                                             узнать подробнее
                                         </div>
                                     </div>
-                                    <div class="photo">
+                                    <div class="photo col-md-6 col-12"">
                                         <img src="img/tabs/group.jpg" alt="">
                                     </div>
                                 </div>               
-                                <div class="info-tabcontent">
-                                    <div class="description">
+                                <div class="info-tabcontent row">
+                                    <div class="description col-md-6 col-12"">
                                         <div class="description-title">
                                             Чем занимаемся
                                         </div>
@@ -96,12 +96,12 @@
                                             узнать подробнее
                                         </div>
                                     </div>
-                                    <div class="photo">
+                                    <div class="photo col-md-6 col-12">
                                         <img src="img/tabs/projects.jpg" alt="">
                                     </div>
                                 </div>               
-                                <div class="info-tabcontent">
-                                    <div class="description">
+                                <div class="info-tabcontent row">
+                                    <div class="description col-md-6">
                                         <div class="description-title">
                                             Кто мы такие
                                         </div>
@@ -112,7 +112,7 @@
                                             узнать подробнее
                                         </div>
                                     </div>
-                                    <div class="photo">
+                                    <div class="photo col-md-6 col-12">
                                         <img src="img/tabs/weare.jpg" alt="">
                                     </div>
                                 </div>               
@@ -122,7 +122,7 @@
                     <div class="media" id="media-content">
                         <div class="container">
                             <div class="row">
-                                <div class="our-photo">
+                                <div class="our-photo col-6">
                                     
                                 </div>
                                 <div class="our-video"></div>
@@ -132,7 +132,7 @@
                     <footer class="footer-block">
                         <div class="container" id="contacts">
                             <div class="row">
-                                <div class="social-block col-6">
+                                <div class="social-block col-md-6 col-12">
                                     <div class="social-block-title">
                                         Наши социальные сети
                                     </div>
@@ -149,7 +149,7 @@
                                         </div>                                        
                                     </div>
                                 </div>
-                                <div class="contact-block col-6">
+                                <div class="contact-block col-md-6 col-12">
                                     <div class="contact-block-title">
                                         Организационные вопросы
                                     </div>
